more spacing fixes

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,26 @@
     font-size: 1rem;
     white-space: pre-wrap;
     justify-self: center;
+    /* max-width: 550px; */
+    margin-left: 32px;
+    max-width: 100vw;
     /* margin-bottom: 64px; */
+}
+
+.chapter-text-intro-japanese {
+    color: white;
+    font-size: 1rem;
+    white-space: pre-wrap;
+    /* padding: 0px 16px; */
+    margin-bottom: 128px;
+    /* margin-left: 178px; */
+    /* max-width: 615px; */
+    /* margin-top: 64px; */
+    column-count: 2;
+    margin-left: 64px;
+    justify-self: center;
+    max-width: 100vw;
+    /* column-gap: 96px; */
 }
 
 .chapter-text-intro {
@@ -41,8 +60,10 @@
     /* max-width: 615px; */
     /* margin-top: 64px; */
     column-count: 2;
+    margin-left: 0px;
     justify-self: center;
-    column-gap: 64px;
+    column-gap: 128px;
+    max-width: 100vw;
 }
 
 .chapter-text-centered {
